@@ -3,6 +3,9 @@
 	* Don't call a destructor is the instance was allocated in the C++ world
 	* If a destructor has been called then set the ptr field on the 
 	  smokeqyoto_object struct to 0, and don't call methods on it again.
+	* Renamed IsInstanceContained() as IsContainedInstance(), and only call
+	  a destructor for instances where it is false, as the C++ side will
+	  delete the instance.
 
 2007-02-10  Arno Rehn  <arno@arnorehn.de>
 
